--- a/modules/module-1.2.qmd
+++ b/modules/module-1.2.qmd
@@ -185,9 +185,9 @@ dem_women <- left_join(democracy, women_emp, by = c("iso3c", "year")) |>
   rename(country = country.x) |> 
   select(!country.y)
 
-glimpse(dem_women)  
-
 write_csv(dem_women, "data/dem_women.csv")
+
+glimpse(dem_women)  
 ```
 
 
@@ -197,9 +197,9 @@ write_csv(dem_women, "data/dem_women.csv")
 
 Now that we have completed all of the wrangling, let's do something with it. A common sequence in data science is [group by()](https://dplyr.tidyverse.org/reference/group_by.html), [summarize()](https://dplyr.tidyverse.org/reference/summarise.html) and [arrange()](https://dplyr.tidyverse.org/reference/arrange.html). First, we group the data by certain value or category. Then we summarize it by applying a function like `min()`, `max()`, `mean()`, `median()` or `sd()`. Finally, we order the data according to column values. 
 
-Let's go ahead and apply our three new verbs to the `dem_women` data frame and store the resulting new data frame in an object called `dem_summary`. Then we will print the object to view its contents. 
+Let's go ahead and apply our three new verbs to the `dem_women` data frame and store the resulting new data frame in an object called `dem_summary`. We will group the data by region, take the mean of each variable, and sort the data in descending order based on the regions' polyarchy scores. Then we will print the object to view its contents. 
 
-::: {.note collapse="true"}
+::: {.callout-note collapse="true"}
 To print an object in R, we can either use the `print()` function or just execute the name of the object. Usually it is simpler to just execute the name of the object. 
 :::
 
@@ -215,8 +215,6 @@ dem_summary <- dem_women |>
   arrange(desc(polyarchy)) 
 
 dem_summary
-
-#filter(dem_women, is.na(region))
 ```
 
-Run the code and try changing it yourself. Try summarizing the data with a different function for one or more of the variables. Now try grouping by country instead of region. Finally try arranging the data in ascending rather than descending order (hint: delete "desc" from the `arrange()` call).  
+Run the code and try changing it yourself. Try summarizing the data with a different function for one or more of the variables. Now try grouping by country instead of region. Try arranging the data based on a variable other than `polyarchy`. Finally, try sorting the data in ascending rather than descending order (hint: delete "desc" from the `arrange()` call).  
