--- a/modules/module-1.2.qmd
+++ b/modules/module-1.2.qmd
@@ -199,10 +199,10 @@ glimpse(dem_women)
 
 Now that we have completed all of the wrangling, let's do something with it. A common sequence in data science is [group by()](https://dplyr.tidyverse.org/reference/group_by.html), [summarize()](https://dplyr.tidyverse.org/reference/summarise.html) and [arrange()](https://dplyr.tidyverse.org/reference/arrange.html). First, we group the data by certain value or category. Then we summarize it by applying a function like `min()`, `max()`, `mean()`, `median()` or `sd()`. Finally, we order the data according to column values. 
 
-Let's go ahead and apply our three new verbs to the `dem_women` data frame and store the resulting new data frame in an object called `dem_summary`. We will group the data by region, take the mean of each variable, and sort the data in descending order based on the regions' polyarchy scores. Then we will print the object to view its contents. 
+Let's go ahead and apply our three new verbs to the `dem_women` data frame and store the resulting new data frame in an object called `dem_summary`. We will group the data by region, take the mean of each variable, and sort the data in descending order based on the regions' polyarchy scores. Then we will print the object to view its contents. Along the way, we let's also export the data to a .csv file for future use. 
 
 ::: {.callout-note collapse="true"}
-To print an object in R, we can either use the `print()` function or just execute the name of the object. Usually it is simpler to just execute the name of the object. 
+To print an object in R, we can either use the `print()` function or just execute the name of the object. Oftentimes it is simpler to just execute the name of the object. 
 :::
 
 ```{webr}
@@ -215,6 +215,8 @@ dem_summary <- dem_women |>
     women_rep = mean(women_rep, na.rm = TRUE)
   ) |> 
   arrange(desc(polyarchy)) 
+
+#write_csv(dem_summary, "data/dem_summary.csv")
 
 dem_summary
 ```
