--- a/modules/module-1.2.qmd
+++ b/modules/module-1.2.qmd
@@ -205,7 +205,7 @@ Let's go ahead and apply our three new verbs to the `dem_women` data frame and s
 To print an object in R, we can either use the `print()` function or just execute the name of the object. Oftentimes it is simpler to just execute the name of the object. 
 :::
 
-```{webr}
+```{r}
 dem_summary <- dem_women |> 
   group_by(region)  |> 
   summarize(
@@ -216,7 +216,28 @@ dem_summary <- dem_women |>
   ) |> 
   arrange(desc(polyarchy)) 
 
-#write_csv(dem_summary, "data/dem_summary.csv")
+write_csv(dem_summary, "data/dem_summary.csv")
 ```
 
 Run the code and try changing it yourself. Try summarizing the data with a different function for one or more of the variables. Now try grouping by country instead of region. Try arranging the data based on a variable other than `polyarchy`. Finally, try sorting the data in ascending rather than descending order (hint: delete "desc" from the `arrange()` call).  
+
+```{webr}
+webr::install("dplyr")
+
+library(dplyr)
+library(readr)
+
+dem_summary <- read_csv("data/dem_summary.csv")
+
+dem_summary <- dem_women |> 
+  group_by(region)  |> 
+  summarize(
+    polyarchy = mean(polyarchy, na.rm = TRUE),
+    gdp_pc = mean(gdp_pc, na.rm = TRUE), 
+    flfp = mean(flfp, na.rm = TRUE), 
+    women_rep = mean(women_rep, na.rm = TRUE)
+  ) |> 
+  arrange(desc(polyarchy)) 
+
+dem_summary
+```
