--- a/modules/module-1.2.qmd
+++ b/modules/module-1.2.qmd
@@ -222,7 +222,7 @@ write_csv(dem_summary, "data/dem_summary.csv")
 Run the code and try changing it yourself. Try summarizing the data with a different function for one or more of the variables. Now try grouping by country instead of region. Try arranging the data based on a variable other than `polyarchy`. Finally, try sorting the data in ascending rather than descending order (hint: delete "desc" from the `arrange()` call).  
 
 ```{webr}
-webr::install("dplyr")
+webr::install(c("dplyr", "readr"))
 
 library(dplyr)
 library(readr)
