--- a/modules/module-1.2.qmd
+++ b/modules/module-1.2.qmd
@@ -227,7 +227,7 @@ webr::install(c("dplyr", "readr"))
 library(dplyr)
 library(readr)
 
-dem_summary <- read_csv("data/dem_summary.csv")
+dem_women <- read_csv("data/dem_women.csv")
 
 dem_summary <- dem_women |> 
   group_by(region)  |> 
