--- a/modules/module-1.2.qmd
+++ b/modules/module-1.2.qmd
@@ -221,7 +221,16 @@ write_csv(dem_summary, "data/dem_summary.csv")
 
 Run the code and try changing it yourself. Try summarizing the data with a different function for one or more of the variables. Now try grouping by country instead of region. Try arranging the data based on a variable other than `polyarchy`. Finally, try sorting the data in ascending rather than descending order (hint: delete "desc" from the `arrange()` call).  
 
+
 ```{webr}
+#| label: webr
+
+download.file(
+  'https://raw.githubusercontent.com/eteitelbaum/dataviz-summer-2023/main/modules/data/dem_women.csv',
+  'dem_women.csv'
+)
+
+
 webr::install(c("dplyr", "readr"))
 
 library(dplyr)
