--- a/modules/module-1.2.qmd
+++ b/modules/module-1.2.qmd
@@ -5,6 +5,8 @@ format: html
 highlight-style: atom-one
 filters:
   - webr
+include-in-header: 
+  - coop-coep.html
 execute:
   echo: true
   message: false
