--- a/modules/module-2.2.qmd
+++ b/modules/module-2.2.qmd
@@ -33,7 +33,7 @@ indicators = c(flfp = "SL.TLF.CACT.FE.ZS", gdp_pc = "NY.GDP.PCAP.KD") # define i
 flfp_gdp <- wb_data(indicators, mrnev = 1) |> # download most recent non-missing value of indicators
     left_join(select(wb_countries(), c(iso3c, region)), by = "iso3c")
   
-wealth_flfp <- ggplot(flfp_gdp, aes(x = gdp_pc, y = flfp)) + # plot gdp_pc on the x-axys and flfp on the y-axis  
+wealth_flfp <- ggplot(flfp_gdp, aes(x = gdp_pc, y = flfp)) + # plot gdp_pc vs flfp, store in wealth_flfp  
   geom_point(aes(color = region)) + # add an aesthetic to color points by region
   geom_smooth(method = "loess", linewidth = 1) +  # make the line a loess curve
   scale_x_log10(labels = scales::dollar_format()) + # stretch x- axis, add '$' and 'k' to values
